# Containerized-Setup-for-Learn-Environment-Franka-Emika-Panda

./: .gitignore  .gitmodules  LICENSE  README.md  build.ps1  build.sh  run.ps1  run.sh
.devcontainer/: Dockerfile  Dockerfile_core  devcontainer.json  docker-compose.yml
catkin_ws/src/ai_plugin/: CMakeLists.txt  package.xml  rviz_plugin.xml
catkin_ws/src/ai_plugin/include/rviz-ai-panel/: ai_agent.hpp  rviz_panel.hpp  topic_collector.hpp
catkin_ws/src/ai_plugin/include/rviz-panel/: rviz_panel.hpp
catkin_ws/src/ai_plugin/resource/: ai_panel.ui
catkin_ws/src/ai_plugin/src/: ai_agent.cpp  ai_subscribed_topics.txt  context_prompt.txt  rostopic.py  rviz_panel.cpp  topic_collector.cpp
catkin_ws/src/learn_enviroment/: CMakeLists.txt  package.xml  rviz_plugin.xml
catkin_ws/src/learn_enviroment/include/learn-enviroment/: rviz_panel.hpp
catkin_ws/src/learn_enviroment/launch/: combined_launch.launch
catkin_ws/src/learn_enviroment/src/: learn_env.py  rviz_panel.cpp
